refactor: delete user
